     multi-function devices, this package supports only the printer
     function -- it does not support scanning or fax).

  11) Preliminary support for the Epson Stylus Photo R2400.  This
     printer has been partially tuned, but there will likely be
     further changes to this driver.

  12) Preliminary support for the Epson PictureMate/E-100.  This
     printer may or may not function correctly, and is not tuned.

  13) Preliminary support for the Epson Stylus Photo RX700.  This
     printer has been partially tuned, but there will likely be
     further changes to this driver.

  14) Initial support for Canon S200, SELPHY CP-510 and SELPHY CP-710;
     Sony UP-DR150, and Olympus P-11 has been added.

  15) The Canon PIXMA iP4000 printers can now print to cds.  Duplex
     printing with binding on the short side is now supported, too.

  16) The Epson Stylus Photo R200 and related printers have been
     retuned to give improved detail in the shadows, reduced ink
     usage, more accurate grayscale, and more accurate colors.
     Affected printers are presently the R200, R210, R220, R300, R310,
     R320, R340, RX400, RX420, RX425, RX430, RX500, RX510, RX600,
     RX620, RX630, PM-D750, PM-D770, PM-G700, and PM-G720.

     Any profiles generated against these printers will have to be
     re-created.

  17) New "transposed" resolutions (1440x720 and 2880x1440) have been
     added for some Epson printers.  These resolutions are actually
     equivalent to 720x1440 and 1440x2880 DPI respectively.  In some
     cases these may yield better results (specifically, less
     microbanding) than the normal 1440x720 and 2880x1440 DPI
     resolutions.

  18) Quadtone printing now works correctly regardless of whether
     color or grayscale mode is selected.


================================================================

Overall changes between Gimp-Print 4.2 and Gutenprint 5.0:

* General User-Visible Changes:
