@@ -1,5 +1,5 @@
 /*
- * "$Id: print-escp2-data.c,v 1.185 2006/01/05 22:51:27 rlk Exp $"
+ * "$Id: print-escp2-data.c,v 1.186 2006/01/06 22:10:42 rlk Exp $"
  *
  *   Print plug-in EPSON ESC/P2 driver for the GIMP.
  *
@@ -127,7 +127,7 @@ static const escp2_dot_size_t spro_c4pl_pigment_dotsizes =
 { 0x11, 0x11, 0x11, 0x10, 0x10,   -1,    5,    5,    5 };
 
 static const escp2_dot_size_t picturemate_dotsizes =
-{   -1,   -1,   -1,   -1, 0x11, 0x12, 0x12,   -1,   -1 };
+{   -1,   -1,   -1, 0x12, 0x12, 0x12, 0x12,   -1,   -1 };
 
 /*
  * Bits are for:
@@ -292,7 +292,7 @@ static const escp2_densities_t spro10000_densities =
 { 2.6, 1.3,  0.65, 0.431, 0.216, 0.392, 0.0,   0.0,   0.0   };
 
 static const escp2_densities_t picturemate_densities =
-{   0,   0,     0,     0, 0.999, 0.999, 0.500, 0.0,   0.0   };
+{   0,   0,     0, 0.9, 0.45, 0.225, 0.113, 0.0,   0.0   };
 
 
 static const input_slot_t standard_roll_feed_input_slots[] =
@@ -1968,12 +1968,12 @@ const stpi_escp2_printer_t stpi_escp2_model_capabilities[] =
      MODEL_SEND_ZERO_ADVANCE_YES | MODEL_SUPPORTS_INK_CHANGE_NO |
      MODEL_PACKET_MODE_YES),
     90, 1, 3, 90, 1, 3, 90, 1, 3, 6,
-    360, 14400, -1, 2880, 1440, 1440, 720, 0, 1, 0, 0, 0, 0, 0,
+    360, 14400, -1, 2880, 1440, 720, 720, 0, 1, 0, 0, 0, 0, 0,
     INCH(4), INCH(1200), INCH(2), INCH(2),
     9, 9, 0, 0, 9, 9, 0, 0, 9, 9, 0, 0, 9, 9, 0, 0, 204, 191, 595, 842,
     4, 15, 0, 0,
     picturemate_dotsizes, picturemate_densities, &stpi_escp2_variable_picturemate_drops,
-    stpi_escp2_superfine_reslist, &stpi_escp2_picturemate_inkgroup,
+    stpi_escp2_picturemate_reslist, &stpi_escp2_picturemate_inkgroup,
     variable_bits, c1_5_base_res, &default_input_slot_list,
     &standard_quality_list, &new_init_sequence, &je_deinit_sequence,
     NULL, &picturemate_channel_name_list
